# python-package-copier-template

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  copier.yml  extensions.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release.yml
docs/: about_the_docs.md  adopt_existing_project.md  agents.md  cli.md  conf.py  configuration.md  design_decisions.md  getting_started.md  index.md  maintain_template.md
docs/_build/html/: .buildinfo  about_the_docs.html  configuration.html  design_decisions.html  genindex.html  getting_started.html  index.html  maintain_template.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: about_the_docs.doctree  configuration.doctree  design_decisions.doctree  environment.pickle  getting_started.doctree  index.doctree  maintain_template.doctree
docs/_build/html/_sources/: configuration.md  design_decisions.md
project/: .gitignore.jinja  AGENTS.md.jinja  AGENTS.md.jinja2  Makefile.jinja  README.md.jinja  prek.toml.jinja  pyproject.toml.jinja  {{_copier_conf.answers_file}}.jinja
project/.github/workflows/: cd.yml.jinja  ci.yml.jinja  template-update.yml.jinja
project/docs/: about_the_docs.md.jinja  conf.py.jinja  development_workflow.md.jinja  index.md.jinja
project/tests/: {% if python_package_command_line_name %}test_cli.py{% endif %}.jinja
python_package_copier_template/: cli.py  extensions.py
tests/: test_cli.py
