[project]
name = "python-package-copier-template"
version = "0.1.1"
description = "A Copier template for modern Python projects."
readme = "README.md"
authors = [{ name = "Martín Gaitán", email = "gaitan@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "copier>=9.9.0",
    "copier-templates-extensions>=0.3.2",
    "ruff>=0.12.9",
]

[tool.ruff]
line-length = 120
