[project]
name = "python-package-copier-template"
version = "0.2"
description = "A Copier template for modern Python projects."
readme = "README.md"
authors = [{ name = "Martín Gaitán", email = "gaitan@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "copier>=9.11.0",
    "copier-templates-extensions>=0.3.2",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 120
