[project]
name = "python-package-copier-template"
version = "0.3.3"
description = "A Copier template for modern Python projects."
readme = "README.md"
authors = [{ name = "Martín Gaitán", email = "gaitan@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "copier>=9.11.0",
    "copier-templates-extensions>=0.3.2",
    "ruff>=0.14.9",
]

[project.scripts]
python-package-copier-template = "python_package_copier_template.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "python_package_copier_template"
module-root = ""

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
